# MD-EXAFS

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  continue.md  environment.yml  feff_mixed_neighbors.inp  feff_singular_Fe.inp  plot_chi_from_database.py  pyproject.toml  setup_test_env.sh  test_database_implementation.py  test_modules.py  test_singular_atom.py  test_user_defined_potentials.py
docs/: database_feature_README.md  database_optimization_plan.md  lammps_support.md  multipath_feature.md  usage.md
examples/: README.md  averaging_config.toml  averaging_database_config.toml  averaging_paths_config.toml  fe_oxide_config.toml  multipath_averaging.toml  python_example.py  rdf_au_config.toml  rdf_npt_config.toml  run_feff_local.py  run_slurm.sh  uo2_config.toml  uo2_single_frame.xyz  workflow_example.sh
examples/rdf_results/: au_rdf_analysis.txt
examples/verify_database/: README.md  build_and_verify.py  compare_single_atom.py  quick_test.py
src/md_exafs/: __init__.py  build_chi_database.py  chi_averager.py  chi_database_query.py  config.py  convergence_check.py  db_schema.py  feff_generator.py  md_analysis.py  multipath.py  rdf_analysis.py  run_feff_local.py  structure_input_generator.py  trajectory_processor.py
tests/: __init__.py
